--- a/masbot/Cargo.toml
+++ b/masbot/Cargo.toml
@@ -3,10 +3,22 @@ name = "masbot"
 version = "0.1.0"
 authors = ["Maspenguin <maspenguin@gmail.com>"]
 edition = "2018"
+
 [dependencies.serenity]
-version = "0.8"
-features = ["cache", "framework", "standard_framework", "voice", "http", "rustls_backend"]
+git = "https://github.com/Maspenguin/serenity"
+branch = "current"
+version = "0.9.1"
+default-features = false
+features = ["builder", "client", "gateway", "http", "cache", "model", "utils", "voice", "rustls_backend"]
+
+[dependencies.songbird]
+git = "https://github.com/Maspenguin/serenity"
+branch = "current"
+version = "0.1.0"
+
 [dependencies]
 serde = "1.0.104"
 serde_json = "1.0"
 rand = "0.7"
+tokio = { version = "0.2", features = ["macros"] }
+futures = "0.3"
