--- a/masbot/Cargo.toml
+++ b/masbot/Cargo.toml
@@ -5,9 +5,7 @@ authors = ["Maspenguin <maspenguin@gmail.com>"]
 edition = "2018"
 
 [dependencies.serenity]
-git = "https://github.com/serenity-rs/serenity"
-branch = "current"
-version = "0.9.1"
+version = "0.10"
 default-features = false
 features = ["builder", "client", "gateway", "http", "cache", "model", "utils", "voice", "rustls_backend"]
 
@@ -20,6 +18,6 @@ branch = "current"
 serde = "1.0.104"
 serde_json = "1.0"
 rand = "0.7"
-tokio = { version = "0.2", features = ["macros"] }
+tokio = { version = "1.0", features = ["macros","rt-multi-thread"] }
 futures = "0.3"
 async-std = "1.7.0"
