--- a/masbot/Cargo.toml
+++ b/masbot/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 [dependencies.serenity]
 version = "0.10"
 default-features = false
-features = ["builder", "client", "gateway", "http", "cache", "model", "utils", "voice", "rustls_backend"]
+features = ["builder", "client", "gateway", "http", "cache", "model", "utils", "voice", "rustls_backend","collector"]
 
 [dependencies.songbird]
 git = "https://github.com/serenity-rs/songbird"
